--- a/src/styles/StylesContainer1.module.css
+++ b/src/styles/StylesContainer1.module.css
@@ -1,16 +1,157 @@
-.container1{
-    /* border: 1px solid red; */
-    display: grid;
-    grid-template-columns: repeat(40,minmax(10px,1fr));
-    grid-template-rows: repeat(30,minmax(10px, 24px));
-    background-color: #30393B;
+:root {
+  --color-focus: #4fdbb8;
 }
-.title{
-    color: #fff;
-    grid-column: 5/39;
-    grid-row: 4/12;
-    font-size: 500%;
-    font-weight: 1000;
-    font-family: font-file-82132;
 
+.container1 {
+  /* border: 1px solid red; */
+  /* display: grid;
+    grid-template-columns: repeat(40,minmax(10px,1fr));
+    grid-template-rows: repeat(30,minmax(10px, 24px)); */
+  /* display: flex; */
+  width: 100%;
+  height: 100vh;
+  background-color: #30393b;
+  padding-left: 15%;
+  padding-top: 9%;
 }
+.title {
+  color: #fff;
+  grid-column: 5/39;
+  grid-row: 4/12;
+  font-size: 500%;
+  font-weight: 1000;
+  font-family: font-file-82132;
+  /* font-family: 'Cooper Black'; */
+  z-index: 5;
+  display: block;
+  flex-wrap: wrap;
+}
+.title span {
+  display: inline-block;
+  cursor: default;
+}
+.subtitulo {
+  font-size: 20px;
+  color: #697274;
+}
+
+.title span:hover {
+  animation: animar-texto 1s ease-in-out 1 normal both;
+}
+
+@keyframes animar-texto {
+  from {
+    transform: scale(1, 1, 1);
+  }
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+    color: var(--color-focus);
+  }
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    transform: scale3d(1.05, 0.95, 1);
+    color: #fff;
+  }
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.containerButtom1 {
+  /* border: 1px solid white; */
+  /* margin-bottom: 20px; */
+  margin-bottom: 40px;
+}
+
+.butttomContact {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  color: var(--color-focus);
+  border: 2px solid var(--color-focus);
+  padding: 8px 50px;
+  cursor: pointer;
+  transition: 0.3s ease all;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+.butttomContact::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: var(--color-focus);
+  position: absolute;
+  z-index: 1;
+  top: -40px;
+  left: 0;
+  transition: 0.3s ease-in-out all;
+}
+.butttomContact span {
+  position: relative;
+  z-index: 2;
+  transition: 0.3s ease all;
+  /* color: #fff; */
+}
+.butttomContact:hover {
+  color: black;
+}
+.butttomContact:hover::after {
+  top: 0;
+}
+
+
+
+.containerbotom2{
+    /* border: 1px solid white; */
+}
+.butttomContact2 {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  color: var(--color-focus);
+  border: 2px solid var(--color-focus);
+  padding: 20px 105px;
+  cursor: pointer;
+  transition: 0.3s ease all;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+.span2 {
+  transition: .4s ease-in-out all;
+  position: absolute;
+  left: 30%;
+}
+.butttomContact2 .icon2{
+display: flex;
+align-items: center;
+position: absolute;
+z-index: 2;
+left: -20px;
+transition: .3s ease-in-out all;
+opacity: 0;
+}
+.butttomContact2:hover{
+    background-color: var(--color-focus);
+    color: black;
+}
+.butttomContact2 svg{
+    width: 20px; 
+    height: 55px;
+}
+.butttomContact2:hover .icon2{
+    left: calc(100% - 25px);
+    opacity: 1;
+}
+.butttomContact2:hover span {
+  left: 20px;
+}
+
