--- a/src/styles/StylesContainer1.module.css
+++ b/src/styles/StylesContainer1.module.css
@@ -1,16 +1,50 @@
-.container1{
-    /* border: 1px solid red; */
-    display: grid;
-    grid-template-columns: repeat(40,minmax(10px,1fr));
-    grid-template-rows: repeat(30,minmax(10px, 24px));
-    background-color: #30393B;
+.container1 {
+  /* border: 1px solid red; */
+  display: grid;
+  grid-template-columns: repeat(40, minmax(10px, 1fr));
+  grid-template-rows: repeat(30, minmax(10px, 24px));
+  background-color: #30393b;
 }
-.title{
-    color: #fff;
-    grid-column: 5/39;
-    grid-row: 4/12;
-    font-size: 500%;
-    font-weight: 1000;
-    font-family: font-file-82132;
+.title {
+  color: #fff;
+  grid-column: 5/39;
+  grid-row: 4/12;
+  font-size: 500%;
+  font-weight: 1000;
+  font-family: font-file-82132;
+}
 
+.animate__bounce {
+    animation-name: bounce;
+    animation-duration: 2s;
+}
+
+@keyframes bounce {
+  0%,
+  100%,
+  20%,
+  53%,
+  80% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  40%,
+  43% {
+    -webkit-transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0);
+    transform: translate3d(0, -30px, 0);
+  }
+  70% {
+    -webkit-transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0);
+    transform: translate3d(0, -15px, 0);
+  }
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0);
+    transform: translate3d(0, -4px, 0);
+  }
 }
