--- a/src/styles/StylesContainer1.module.css
+++ b/src/styles/StylesContainer1.module.css
@@ -9,7 +9,7 @@
     grid-template-rows: repeat(30,minmax(10px, 24px)); */
   /* display: flex; */
   width: 100%;
-  height: 200vh;
+  height: 165vh;
   background-color: #30393b;
   padding-left: 15%;
   padding-top: 9%;
@@ -175,8 +175,42 @@
 }
 .buttonsec2{
     position: relative;
-    width: 15%;
-    height: 5%;
-    left: 80%;
-
+    width: 20%;
+    height: 3rem;
+    left: 10%;
+    top:70px;
+    background-color: transparent;
+    border: 2px solid var(--color-focus);
+    color: var(--color-focus);
+    transition: 0.3s ease all;
+    border-radius: 5px;
+    
+    overflow: hidden;
+}
+/* .spanbuttonsec2{
+    transition: 0.4s ease-in-out all;
+  position: absolute;
+} */
+.buttonsec2::after{
+    content: '';
+    width: 100%;
+    height: 110%;
+    background: var(--color-focus);
+    position: absolute;
+    z-index: 1;
+    left: -240px;
+    top: -1px;
+    transition: 0.3s ease-in-out all;
+}
+.buttonsec2 span {
+    position: relative;
+    z-index: 2;
+    transition: 0.3s ease all;
+    /* color: #fff; */
+  }
+.buttonsec2:hover::after{
+    left: 0;
+}
+.buttonsec2:hover span{
+    color: black;
 }
