--- a/src/styles/StylesContainer1.module.css
+++ b/src/styles/StylesContainer1.module.css
@@ -156,36 +156,39 @@
 
 .containerSubTitulo {
   margin-top: 200px;
-  border: 1px solid palegreen;
+  /* border: 1px solid palegreen; */
 }
 .SubTitleH2 {
   color: var(--color-focus);
   font-size: 60px;
 }
 .containerparagraph2{
-    border: 1px solid indianred;
+    /* border: 1px solid indianred; */
     display: flex;
+    position: relative;
 }
 .paragraph2 {
   color: #fff;
-  border: 1px solid aqua;
+  /* border: 1px solid aqua; */
   margin-top: 40px;
   width: 800px;
   /* margin-right: 450px; */
 }
 .buttonsec2{
-    position: relative;
+    position: absolute;
     width: 20%;
     height: 3rem;
-    left: 10%;
+    /* right: 30%; */
     top:70px;
     background-color: transparent;
     border: 2px solid var(--color-focus);
     color: var(--color-focus);
-    transition: 0.3s ease all;
+    transition: 0.3s linear all;
     border-radius: 5px;
-    
     overflow: hidden;
+    right: 0;
+    bottom: 0;
+    
 }
 /* .spanbuttonsec2{
     transition: 0.4s ease-in-out all;
@@ -202,15 +205,15 @@
     top: -1px;
     transition: 0.3s ease-in-out all;
 }
-.buttonsec2 span {
-    position: relative;
-    z-index: 2;
-    transition: 0.3s ease all;
-    /* color: #fff; */
-  }
-.buttonsec2:hover::after{
-    left: 0;
-}
-.buttonsec2:hover span{
-    color: black;
-}
+    .buttonsec2 span {
+        position: relative;
+        z-index: 2;
+        transition: 0.3s ease all;
+        /* color: #fff; */
+    }
+    .buttonsec2:hover::after{
+        left: 0;
+    }
+    .buttonsec2:hover span{
+        color: black;
+    }
