--- a/src/styles/StylesSectionGalery.module.css
+++ b/src/styles/StylesSectionGalery.module.css
@@ -16,3 +16,23 @@
     /* opacity: 1; */
     filter: brightness(100%);
 }
+
+.imgGalery::after{
+    content: '';
+    /* width: 100%;
+    height: 110%; */
+    background: var(--color-focus);
+    position: absolute;
+    z-index: 1;
+    /* left: -240px;
+    top: -1px; */
+    transition: 0.3s ease-in-out all;
+}
+.containerGalery span{
+    position: relative;
+    z-index: 2;
+    transition: 0.3s ease all;
+}
+.imgGalery:hover::after{
+    /* left: 0; */
+}
