--- a/src/styles/StylesContainer1.module.css
+++ b/src/styles/StylesContainer1.module.css
@@ -38,6 +38,9 @@
 .title span:hover {
   animation: animar-texto 1s ease-in-out 1 normal both;
 }
+.SubTitleH2 span:hover{
+  animation: animar-texto 1s ease-in-out 1 normal both;
+}
 
 @keyframes animar-texto {
   from {
@@ -106,9 +109,7 @@
   top: 0;
 }
 
-.containerbotom2 {
-  /* border: 1px solid white; */
-}
+
 .butttomContact2 {
   display: inline-flex;
   align-items: center;
@@ -161,6 +162,7 @@
 .SubTitleH2 {
   color: var(--color-focus);
   font-size: 60px;
+  display: flex;
 }
 .containerparagraph2{
     /* border: 1px solid indianred; */
@@ -197,7 +199,7 @@
 .buttonsec2::after{
     content: '';
     width: 100%;
-    height: 110%;
+    height:110%;
     background: var(--color-focus);
     position: absolute;
     z-index: 1;
@@ -216,4 +218,12 @@
     }
     .buttonsec2:hover span{
         color: black;
+    }
+
+    .box{
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: var(--color-focus);
+        position: absolute;
     }
