--- a/src/styles/StylesSectionGalery.module.css
+++ b/src/styles/StylesSectionGalery.module.css
@@ -11,20 +11,51 @@
     /* opacity: .6; */
     filter: brightness(40%);
     transition: .3s ease-in-out all;
+    position: relative;
 }
+/* .titleSpan span{
+    position: relative;
+    z-index: 2;
+    transition: 0.3s ease all;
+} */
+/* h6 span{
+    color: aliceblue;
+} */
 .imgGalery:hover{
     /* opacity: 1; */
     filter: brightness(100%);
 }
 
-.imgGalery::after{
+
+
+.div1imgGalery span{
+    /* border: 1px solid white; */
+    position: absolute;
+    z-index: -2;
+    color: white;
+    text-align: center;
+    left: 15%;
+    top: 181%;
+    font-size: 84%;
+    left: 15.6%;
+    transition: opacity 8.3s ease all;
+    
+}
+.div1imgGalery::after{
     content: '';
-    /* width: 100%;
-    height: 110%; */
+    width: 8%;
+    height: 15%;
     background: var(--color-focus);
     position: absolute;
-    z-index: 1;
-    /* left: -240px;
-    top: -1px; */
+    z-index:-1;
+    left: 200px;
+    top: 1170px;
     transition: 0.3s ease-in-out all;
+    border-radius:50%;
+}
+.div1imgGalery:hover span{
+    z-index: 2;
+}
+.div1imgGalery:hover::after{
+    z-index: 1;
 }
