agregamos mas animaciones, 2º y 3º seccion

--- a/src/styles/StylesContainer1.module.css
+++ b/src/styles/StylesContainer1.module.css
@@ -10,7 +10,7 @@
   /* display: flex; */
   width: 100%;
   height: 165vh;
-  background-color: #30393b;
+  background-color: #1d1d1d;
   padding-left: 15%;
   padding-top: 9%;
 }
