--- a/src/styles/StylesContainer1.module.css
+++ b/src/styles/StylesContainer1.module.css
@@ -2,6 +2,19 @@
   --color-focus: #4fdbb8;
 }
 
+.svgsBack{
+  color: #fff;
+  display: flex;
+  position: absolute;
+  left: 80%;
+  top:35%; 
+  transform: scale(20);
+
+  width: 100px;
+  height: 100px;
+  background: transparent;
+}
+
 .container1 {
   /* border: 1px solid red; */
   /* display: grid;
