--- a/src/styles/StylesMenu.module.css
+++ b/src/styles/StylesMenu.module.css
@@ -20,10 +20,10 @@
     grid-column: 2/9;
     grid-row: 5/6;
     margin: 0 0 10px 0;
-    color: #fff;
+    color: #ababaa;
 }
 .subTitle{
-    color: #fff;
+    color: #666666;
     grid-column: 2/10;
     grid-row: 6/7;
     margin:  8px 0 0 0;
@@ -32,6 +32,10 @@
 .buttonGroup{
     grid-column: 1/11;
     grid-row: 8/15;
+}
+.buttonGroup button{
+    color: #908c86;
+    background-color: #181818;
 }
 .iconFacebook{
     display: flex;
