--- a/src/styles/StylesContainer1.module.css
+++ b/src/styles/StylesContainer1.module.css
@@ -2,44 +2,44 @@
   --color-focus: #4fdbb8;
 }
 
-.svgsBoostrap{
+.svgsBoostrap {
   /* color: #fff; */
   /* border: 1px solid red; */
   display: flex;
   position: absolute;
   left: 82%;
-  top:1%; 
+  top: 1%;
   /* transform: scale(1); */
 
   width: 50px;
   height: 50px;
   background: transparent;
 }
-.jsImage{
+.jsImage {
   display: flex;
   position: absolute;
   left: 50%;
-  top:1%; 
+  top: 1%;
   width: 50px;
   height: 50px;
 }
-.reactImage{
+.reactImage {
   display: flex;
   position: absolute;
   left: 18%;
-  top:1%; 
+  top: 1%;
   width: 60px;
   height: 60px;
 }
-.floatImg{
+.floatImg {
   /* border: 2px solid red; */
   display: flex;
   position: fixed;
   z-index: 100;
   left: 91.87vw;
   top: 15%;
-  width: 7%;
-  height: 20%;
+  width: 5.5rem;
+  height: 8.5rem;
   background-image: url(http://cdn.shopify.com/s/files/1/0164/2390/t/2/assets/awwwards_honorable_white_right.png?7286100469750561975);
 }
 
@@ -79,7 +79,7 @@
 .title span:hover {
   animation: animar-texto 1s ease-in-out 1 normal both;
 }
-.SubTitleH2 span:hover{
+.SubTitleH2 span:hover {
   animation: animar-texto 1s ease-in-out 1 normal both;
 }
 
@@ -150,7 +150,6 @@
   top: 0;
 }
 
-
 .butttomContact2 {
   display: inline-flex;
   align-items: center;
@@ -195,7 +194,6 @@
   left: 20px;
 }
 
-
 .containerSubTitulo {
   margin-top: 200px;
   /* border: 1px solid palegreen; */
@@ -205,10 +203,10 @@
   font-size: 60px;
   display: flex;
 }
-.containerparagraph2{
-    /* border: 1px solid indianred; */
-    display: flex;
-    position: relative;
+.containerparagraph2 {
+  /* border: 1px solid indianred; */
+  display: flex;
+  position: relative;
 }
 .paragraph2 {
   color: #fff;
@@ -217,54 +215,77 @@
   width: 800px;
   /* margin-right: 450px; */
 }
-.buttonsec2{
-    position: absolute;
-    width: 20%;
-    height: 3rem;
-    /* right: 30%; */
-    top:70px;
-    background-color: transparent;
-    border: 2px solid var(--color-focus);
-    color: var(--color-focus);
-    transition: 0.3s linear all;
-    border-radius: 5px;
-    overflow: hidden;
-    right: 0;
-    bottom: 0;
-    
+.buttonsec2 {
+  position: absolute;
+  width: 20%;
+  height: 3rem;
+  /* right: 30%; */
+  top: 70px;
+  background-color: transparent;
+  border: 2px solid var(--color-focus);
+  color: var(--color-focus);
+  transition: 0.3s linear all;
+  border-radius: 5px;
+  overflow: hidden;
+  right: 0;
+  bottom: 0;
 }
 /* .spanbuttonsec2{
     transition: 0.4s ease-in-out all;
   position: absolute;
 } */
-.buttonsec2::after{
-    content: '';
-    width: 100%;
-    height:110%;
-    background: var(--color-focus);
-    position: absolute;
-    z-index: 1;
-    left: -240px;
-    top: -1px;
-    transition: 0.3s ease-in-out all;
+.buttonsec2::after {
+  content: "";
+  width: 100%;
+  height: 110%;
+  background: var(--color-focus);
+  position: absolute;
+  z-index: 1;
+  left: -260px;
+  top: -1px;
+  transition: 0.3s ease-in-out all;
 }
-    .buttonsec2 span {
-        position: relative;
-        z-index: 2;
-        transition: 0.3s ease all;
-        /* color: #fff; */
-    }
-    .buttonsec2:hover::after{
-        left: 0;
-    }
-    .buttonsec2:hover span{
-        color: black;
-    }
+.buttonsec2 span {
+  position: relative;
+  z-index: 2;
+  transition: 0.3s ease all;
+  /* color: #fff; */
+}
+.buttonsec2:hover::after {
+  left: 0;
+}
+.buttonsec2:hover span {
+  color: black;
+}
 
-    .box{
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        background-color: var(--color-focus);
-        position: absolute;
-    }
+.box {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: var(--color-focus);
+  position: absolute;
+}
+
+/* responsive design  */
+@media screen and (max-width: 639px) {
+}
+@media screen and (max-width: 1023px) {
+  .container1 {
+    padding-left: 4%;
+    padding-right: 3%;
+  }
+  .buttonsec2 {
+    top: 8rem;
+  }
+  .container1 {
+    height: 75rem;
+  }
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1024px) {
+}
+@media screen and (min-width: 1280px) {
+}
+@media screen and (min-width: 1536px) {
+}
