--- a/src/styles/StylesFormularioContact.module.css
+++ b/src/styles/StylesFormularioContact.module.css
@@ -3,18 +3,15 @@
   --colorback: #1d1d1d;
 }
 .containerFormularioContact {
-  border: 1px solid red;
   margin-left: 10%;
   background-color: var(--colorback);
   display: flex;
 }
 .containerContact {
-    border: 1px solid yellow;
-    color: var(--color-focus);
-    width: 50%;
+  color: var(--color-focus);
+  width: 100%;
 }
 .subtitleContact {
-  
   margin-top: 5%;
   margin-left: 4%;
   font-size: 60px;
@@ -23,19 +20,40 @@
   color: #fff;
   margin: 1% 11% 1% 5%;
 }
-.formulario{
-    border: 1px solid blueviolet;
-    margin: 2% 11% 2% 4%;
-    flex-wrap: wrap;
+.formulario {
+  margin: 2% 11% 2% 4%;
+  /* flex-wrap: wrap; */
+  display: grid;
+  grid-template-columns: repeat(4, calc(100% / 4));
+  grid-template-rows: repeat(3, 3rem);
+  gap: 8px;
 }
-.inputText{
-    width: 50%;
+.inputText1 {
+  border-radius: 8px;
+  width: 100%;
+  grid-column: 1/3;
+  grid-row: 1/2;
 }
-.inputText2{
-    width: 100%;
+.inputText2 {
+  border-radius: 8px;
+  width: 100%;
+  grid-column: 3/5;
+  grid-row: 1/2;
+}
+.inputText3 {
+  border-radius: 8px;
+  width: 100%;
+  grid-column: 1/5;
+  grid-row: 2/3;
+}
+.inputText4 {
+  border-radius: 8px;
+  width: 100%;
+  grid-column: 1/5;
+  grid-row: 3/4;
 }
 .containerMap {
-    border: 1px solid orange;
-    color: var(--color-focus);
-    width: 50%;
+  border-radius: 8px;
+  color: var(--color-focus);
+  width: 50%;
 }
