--- a/src/styles/StylesSectionGalery.module.css
+++ b/src/styles/StylesSectionGalery.module.css
@@ -1,17 +1,17 @@
-.containerGalery{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 20%);
-    grid-template-rows: 1fr 1fr;
-    margin-left: 135px;
+.containerGalery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 20%);
+  grid-template-rows: 1fr 1fr;
+  margin-left: 135px;
 }
-.imgGalery{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    /* opacity: .6; */
-    filter: brightness(40%);
-    transition: .3s ease-in-out all;
-    position: relative;
+.imgGalery {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  /* opacity: .6; */
+  filter: brightness(40%);
+  transition: 0.3s ease-in-out all;
+  position: relative;
 }
 /* .titleSpan span{
     position: relative;
@@ -21,41 +21,57 @@
 /* h6 span{
     color: aliceblue;
 } */
-.imgGalery:hover{
-    /* opacity: 1; */
-    filter: brightness(100%);
+.imgGalery:hover {
+  /* opacity: 1; */
+  filter: brightness(100%);
 }
 
+.div1imgGalery span {
+  /* border: 1px solid white; */
+  position: absolute;
+  z-index: -2;
+  color: white;
+  text-align: center;
+  left: 15%;
+  top: 181%;
+  font-size: 84%;
+  left: 15.6%;
+  transition: opacity 8.3s ease all;
+}
+.div1imgGalery::after {
+  content: "";
+  width: 8%;
+  height: 15%;
+  background: var(--color-focus);
+  position: absolute;
+  z-index: -1;
+  left: 200px;
+  top: 1170px;
+  transition: 0.3s ease-in-out all;
+  border-radius: 50%;
+}
+.div1imgGalery:hover span {
+  z-index: 2;
+}
+.div1imgGalery:hover::after {
+  z-index: 1;
+}
 
-
-.div1imgGalery span{
-    /* border: 1px solid white; */
-    position: absolute;
-    z-index: -2;
-    color: white;
-    text-align: center;
-    left: 15%;
-    top: 181%;
-    font-size: 84%;
-    left: 15.6%;
-    transition: opacity 8.3s ease all;
-    
+/* responsive design  */
+@media screen and (max-width: 639px) {
+  .containerGalery {
+    display: block;
+    margin-left: 0;
+  }
 }
-.div1imgGalery::after{
-    content: '';
-    width: 8%;
-    height: 15%;
-    background: var(--color-focus);
-    position: absolute;
-    z-index:-1;
-    left: 200px;
-    top: 1170px;
-    transition: 0.3s ease-in-out all;
-    border-radius:50%;
+@media screen and (min-width: 640px) and (max-width: 1023px) {
+  .containerGalery {
+    margin-left: 0;
+  }
 }
-.div1imgGalery:hover span{
-    z-index: 2;
+@media screen and (min-width: 1024px) {
 }
-.div1imgGalery:hover::after{
-    z-index: 1;
+@media screen and (min-width: 1280px) {
+}
+@media screen and (min-width: 1536px) {
 }
