--- a/src/styles/StylesSectionParagraph.module.css
+++ b/src/styles/StylesSectionParagraph.module.css
@@ -1,139 +1,154 @@
 :root {
-    --color-focus: #4fdbb8;
-    --colorback:#1d1d1d;
-  }
-
-  
-  
-  @keyframes animar-texto {
-    from {
-      transform: scale(1, 1, 1);
-    }
-    40% {
-      transform: scale3d(0.75, 1.25, 1);
-      color: var(--color-focus);
-    }
-    50% {
-      transform: scale3d(1.15, 0.85, 1);
-    }
-    65% {
-      transform: scale3d(0.95, 1.05, 1);
-    }
-    75% {
-      transform: scale3d(1.05, 0.95, 1);
-      color: #fff;
-    }
-    to {
-      transform: scale3d(1, 1, 1);
-    }
-  }
-
-.containerSectionParagraph{
-    display: flex;
-    /* border: 1px solid red; */
-    margin-left: 135px;
-    background-color: #1d1d1d;
+  --color-focus: #4fdbb8;
+  --colorback: #1d1d1d;
 }
-.sectionParagraph{
-    /* border: 1px solid green; */
-    margin-top: 5%;
-    width: 50%;
+
+@keyframes animar-texto {
+  from {
+    transform: scale(1, 1, 1);
+  }
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+    color: var(--color-focus);
+  }
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    transform: scale3d(1.05, 0.95, 1);
     color: #fff;
-}
-.sectionParagraph h2{
-    font-size: 60px;
-    margin-left: 65px;
-    color: var(--color-focus);
-    display: flex;
-}
-.sectionParagraph span:hover{
-    animation: animar-texto 1s ease-in-out 1 normal both;
+  }
+  to {
+    transform: scale3d(1, 1, 1);
+  }
 }
 
-.sectionParagraph p{
-    margin: 40px 80px 0 65px;
+.containerSectionParagraph {
+  display: flex;
+  /* border: 1px solid red; */
+  margin-left: 135px;
+  background-color: #1d1d1d;
+}
+.sectionParagraph {
+  /* border: 1px solid green; */
+  margin-top: 5%;
+  width: 50%;
+  color: #fff;
+}
+.sectionParagraph h2 {
+  font-size: 60px;
+  margin-left: 65px;
+  color: var(--color-focus);
+  display: flex;
+}
+.sectionParagraph span:hover {
+  animation: animar-texto 1s ease-in-out 1 normal both;
 }
 
+.sectionParagraph p {
+  margin: 40px 80px 0 65px;
+}
 
-.container3d{
-    display: flex;
-    /* border: 3px solid orange; */
-    /* width: 30%; */
-    /* justify-content: center;
+.container3d {
+  display: flex;
+  /* border: 3px solid orange; */
+  /* width: 30%; */
+  /* justify-content: center;
     align-items: center; */
-    
 }
-.containerCube{
-    display: flex;
-    /* border: 2px solid red; */
-    perspective: 800px;
-    width: 200px;
-    height: 200px;
+.containerCube {
+  display: flex;
+  /* border: 2px solid red; */
+  perspective: 800px;
+  width: 200px;
+  height: 200px;
 
-    position: relative;
-    top: 50%;
-    left: 70%;
+  position: relative;
+  top: 50%;
+  left: 70%;
 }
-.cube{
-    width: 200px;
-    height: 200px;
-    position: relative;
-    transform-style: preserve-3d;
+.cube {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  transform-style: preserve-3d;
 }
-.side{
-    position: absolute;
+.side {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* background-color: yellow; */
+  opacity: 1;
+}
+
+.front {
+  transform: rotateY(0deg) translateZ(100px);
+  /* background-color: #ee4444; */
+  color: var(--color-focus);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.left {
+  transform: rotateY(-90deg) translateZ(100px);
+  /* background-color: #8855ff; */
+  color: var(--color-focus);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.right {
+  transform: rotateY(90deg) translateZ(100px);
+  /* background-color: #ffcc00; */
+  color: var(--color-focus);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.top {
+  transform: rotateX(90deg) translateZ(100px);
+  /* background-color: #0099ff; */
+  color: var(--color-focus);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bottom {
+  transform: rotateX(-90deg) translateZ(100px);
+  /* background-color: rgba(84, 163, 133, .9); */
+  color: var(--color-focus);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.back {
+  transform: rotateY(180deg) translateZ(100px);
+  /* background-color: #ff0055; */
+  color: var(--color-focus);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* responsive design  */
+@media screen and (max-width: 640px) {
+}
+@media screen and (max-width: 1023px) {
+  .containerSectionParagraph {
+    margin-left: 0;
+  }
+  .sectionParagraph {
     width: 100%;
-    height: 100%;
-    /* background-color: yellow; */
-    opacity: 1;
+  }
 }
-
-
-.front{
-    transform: rotateY(0deg) translateZ(100px);
-    /* background-color: #ee4444; */
-    color: var(--color-focus);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@media screen and (min-width: 768px) {
 }
-.left{
-    transform: rotateY(-90deg) translateZ(100px);
-    /* background-color: #8855ff; */
-    color: var(--color-focus);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@media screen and (min-width: 1024px) {
 }
-.right{
-    transform: rotateY(90deg) translateZ(100px);
-    /* background-color: #ffcc00; */
-    color: var(--color-focus);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@media screen and (min-width: 1280px) {
 }
-.top{
-    transform: rotateX(90deg) translateZ(100px);
-    /* background-color: #0099ff; */
-    color: var(--color-focus);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.bottom{
-    transform: rotateX(-90deg) translateZ(100px);
-    /* background-color: rgba(84, 163, 133, .9); */
-    color: var(--color-focus);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.back{
-    transform: rotateY(180deg) translateZ(100px);
-    /* background-color: #ff0055; */
-    color: var(--color-focus);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@media screen and (min-width: 1536px) {
 }
