--- a/src/styles/StylesSectionGalery.module.css
+++ b/src/styles/StylesSectionGalery.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, 20%);
   grid-template-rows: 1fr 1fr;
-  margin-left: 135px;
+  margin-left: 10%;
 }
 .imgGalery {
   display: flex;
