--- a/src/styles/StylesFormularioContact.module.css
+++ b/src/styles/StylesFormularioContact.module.css
@@ -97,3 +97,20 @@
   left: 30%;
   bottom: 25%;
 }
+
+/* responsive design  */
+@media screen and (max-width: 640px) {
+}
+@media screen and (max-width: 1023px) {
+  .containerFormularioContact {
+    margin-left: 0 !important;
+  }
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1024px) {
+}
+@media screen and (min-width: 1280px) {
+}
+@media screen and (min-width: 1536px) {
+}
