--- a/src/styles/StylesSectionGalery.module.css
+++ b/src/styles/StylesSectionGalery.module.css
@@ -64,6 +64,7 @@
   .containerGalery {
     display: block;
     margin-left: 0;
+    padding-left: 0rem;
   }
 }
 @media screen and (min-width: 640px) and (max-width: 1023px) {
