--- a/src/styles/StylesTable.module.css
+++ b/src/styles/StylesTable.module.css
@@ -44,6 +44,9 @@
 @media screen and (min-width: 768px) {
 }
 @media screen and (min-width: 1024px) {
+  .app {
+    margin-left: 9%;
+  }
 }
 @media screen and (min-width: 1280px) {
 }
